src/test/ui/type/ascription/issue-34255-1.stderr
error[E0425]: cannot find value `input_cells` in this scope
  --> $DIR/issue-34255-1.rs:7:9
   |
LL |         input_cells: Vec::new()
   |         ^^^^^^^^^^^ a field by this name exists in `Self`

error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/issue-34255-1.rs:7:30
   |
LL |         input_cells: Vec::new()
   |                              ^^ only `Fn` traits may use parentheses

error[E0601]: `main` function not found in crate `issue_34255_1`
   |
   = note: consider adding a `main` function to `$DIR/issue-34255-1.rs`

error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/issue-34255-1.rs:7:22
   |
LL |         input_cells: Vec::new()
   |                      ^^^^^^^^^^ expected 1 type argument

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0107, E0214, E0425, E0601.
For more information about an error, try `rustc --explain E0107`.
